--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@
     background-color: rgb(8, 49, 6);
     list-style-type: none;
   }
+
+ .right{
+  float: right;
+ }
   
   .navbar a {
     float: left;
@@ -48,7 +52,7 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color:rgb(168, 163, 163);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -56,7 +60,7 @@
   
   .dropdown-content a {
     float: none;
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -70,3 +74,8 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+  .active{
+    background-color: navy;
+  }
+
